--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
+    "angle-normals": "^1.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "bunny": "^1.0.1",
     "canvas-fit": "^1.5.0",
     "canvas-orbit-camera": "^1.0.2",
+    "es2020": "^1.1.9",
     "gl-mat4": "^1.1.4",
-    "regl": "^1.3.0"
+    "regl": "^1.3.0",
+    "regl-camera": "^1.1.2"
   }
 }
