--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "angle-normals": "^1.0.0",
+    "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -8,6 +9,12 @@
     "canvas-fit": "^1.5.0",
     "canvas-orbit-camera": "^1.0.2",
     "es2020": "^1.1.9",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "gl-mat4": "^1.1.4",
     "regl": "^1.3.0",
     "regl-camera": "^1.1.2"
