--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bunny": "^1.0.1",
+    "camera-picking-ray": "^1.0.1",
     "canvas-fit": "^1.5.0",
     "canvas-orbit-camera": "^1.0.2",
     "es2020": "^1.1.9",
@@ -16,6 +17,11 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "gl-mat4": "^1.1.4",
+    "gl-vec3": "^1.0.3",
+    "icosphere": "^1.0.0",
+    "mouse-position": "^2.0.1",
+    "primitive-plane": "^2.0.0",
+    "ray-plane-intersection": "^1.0.0",
     "regl": "^1.3.0",
     "regl-camera": "^1.1.2"
   }
